--- a/myproject/pybo/templates/word_test.html
+++ b/myproject/pybo/templates/word_test.html
@@ -35,7 +35,7 @@
           <input class="btn btn-lg bg-color4 border-dark my-2 col-md-5 text-center" type="submit" value="보기2" style="height:125px;" onclick="location.href='#'">
           <input class="btn btn-lg bg-color4 border-dark my-2 col-md-5 text-center" type="submit" value="보기3" style="height:125px;" onclick="location.href='#'">
           <input class="btn btn-lg bg-color4 border-dark my-2 col-md-5 text-center" type="sumbit" value="보기4" style="height:125px;" onclick="location.href='#'">
-          <button class="btn col-md-2 btn-success mt-5" style="cursor:default;">현재단어/단어개수</button>
+          <button class="btn col-md-2 btn-success mt-5" style="cursor:default;">현재단어/단어개수 test</button>
 
       </div>
     </div>
